// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-scrollable css-1fusbgi"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render smoothScroll 1`] = `
<div
  class="wp-components-scrollable css-194tzq1"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  Some people are worth melting for.
</div>
`;
